--- a/css/main.css
+++ b/css/main.css
@@ -1640,8 +1640,12 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
     padding: 0 1%;
     display: grid;
     align-content: start;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 29% 42% 29%;
     gap: 1%;
+  }
+  
+  .auth-content .utility {
+    display: grid;
   }
 
   .auth-content .feed {
