--- a/css/main.css
+++ b/css/main.css
@@ -1376,12 +1376,13 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
 .utility .card.user-menu .edit-post {
   background: var(--primary);
   color: var(--light);
-  width: fit-content;
-  height: 40px;
+  width: 100%;
+  height: 30px;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 
 /* Posting html */
